# japanese-subtitle-parser

./: .gitignore  CLAUDE.md  Cargo.toml  GRAMMAR_PATTERN_STANDARDS.md  LICENSE  README.md  components.json  index.html  package-lock.json  package.json  process_jlpt_with_kagome.py  tailwind.config.cjs  tsconfig.json  vite.config.ts
compound-extractor/: Cargo.toml
compound-extractor/src/: main.rs
grammar-lib/: Cargo.toml  README.md
grammar-lib/src/: compounds.rs  lib.rs  pattern_components.rs  pattern_matcher.rs  pattern_registry.rs  patterns.rs  text_utils.rs  token_combiner.rs  types.rs  vocabulary.rs
grammar-lib/src/matchers/: common_matchers.rs  mod.rs  n1.rs  n2.rs  n2_matchers.rs  n3.rs  n3_matchers.rs  n4.rs  n4_matchers.rs  n5.rs  n5_matchers.rs
grammar-lib/src/patterns/: mod.rs  n1.rs  n2.rs  n3.rs  n4.rs  n5.rs
grammar-lib/src/tests/: compound_tests.rs  mod.rs  n3_patterns.rs  n4_patterns.rs
grammar-wasm/: Cargo.toml
grammar-wasm/src/: lib.rs
kagome-client/: Cargo.toml
kagome-client/src/: lib.rs
src/: App.css  Install.tsx  Search.tsx  db.rs  error.rs  index.rs  index.tsx  main.rs  search.rs
src-tauri/: .taurignore  Cargo.toml  JLPT_GRAMMAR_PATTERNS.md  jlpt_levels.csv  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  error.rs  kagome.rs  lib.rs  main copy.rs  main.rs  subtitle_importer.rs  test_utils.rs
src-tauri/src/analysis/: japanese_analyzer.rs  kagome_server.rs  mod.rs  morphology.rs  unified_analyzer.rs  vocabulary_extractor.rs
src-tauri/src/db/: episode.rs  grammar_pattern.rs  handler.rs  model.rs  reverse_index.rs  search.rs  show.rs  transcript.rs  transcript_database.rs  word.rs
src-tauri/src/grammar/: genki_patterns.rs  mod.rs  pattern_matcher.rs  pattern_registry.rs  types.rs
src-tauri/src/grammar/matchers/: common_matchers.rs  mod.rs  n2_matchers.rs  n3_matchers.rs  n4_matchers.rs  n5_matchers.rs
src-tauri/src/grammar/patterns/: mod.rs  n1.rs  n2.rs  n3.rs  n4.rs  n5.rs
src-tauri/src/grammar/tests/: complex_patterns.rs  conjugations.rs  integration.rs  mod.rs  n1_patterns.rs  n2_patterns.rs  n3_patterns.rs  n4_patterns.rs  te_forms.rs
src-tauri/src/srt_parser/: episode_info.rs  parsing.rs  show_configs.rs
src-tauri/src/subtitle_importer/: episode_info.rs  parsing.rs  show_configs.rs  types.rs
src-tauri/src/tests/grammar/: integration.rs  mod.rs  n1_patterns.rs  n4_patterns.rs  n5_patterns.rs
src/db/: episode.rs  handler.rs  reverse_index.rs  search.rs  show.rs  transcript.rs  word.rs
src/index/: reverse_index.rs
src/search/: complex_search.rs
src/srt_parser/: episode_info.rs  parsing.rs  show_configs.rs
