[package]
name = "japanese-subtitle-search"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-center", "shell-open", "dialog-open", "fs-read-dir", "fs-read-file"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
regex = "1.10.5"
rusqlite = { version = "0.32.1", features = ["bundled"] }
walkdir = "2"
# Removed: rayon (parallelization removed as requested)
# Removed: tokio (async not used in current codebase)
# Removed: reqwest (HTTP requests not used)  
# Removed: clap (CLI args not used in Tauri app)
# Removed: csv (CSV handling done with simple line parsing)
# Removed: zip (not used in current implementation)
tempfile = "3.12.0"

[dev-dependencies]
tempfile = "3.12.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
